--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ path = "src/main.rs"
 
 [dependencies]
 rustyline = "13.0"
+ureq = { version = "2.10", features = ["json"] }
 
 [profile.release]
 opt-level = 3
